--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dreamy-video-signup</title>
-    <meta name="description" content="GPT Engineer Generated Project" />
-    <meta name="author" content="GPT Engineer" />
-    <meta property="og:image" content="/og-image.svg" />
+    <title>North Aura AB</title>
+    <meta name="description" content="North Aura" />
+    <meta name="author" content="Renew I/O" />
   </head>
   <body>
     <div id="root"></div>
